base/builds/regulus/argocd/projects/landingpage/manifests/kube-ops-view/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-ops-view
spec:
  hostnames:
  - kops.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kube-ops-view
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
